fix(Products): pane align

--- a/app/[locale]/products/components/three-things/main-section/main-section.module.css
+++ b/app/[locale]/products/components/three-things/main-section/main-section.module.css
@@ -13,6 +13,7 @@
     margin-top: 120px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .content-list {
